err/minixsv.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/genxmlif'...
Compiling './lib/python3.5/site-packages/genxmlif/__init__.py'...
***   File "./lib/python3.5/site-packages/genxmlif/__init__.py", line 81
    raise AttributeError, "Unknown XML interface: %s" %(xmlIf)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/genxmlif/xmlif4Dom.py'...
***   File "./lib/python3.5/site-packages/genxmlif/xmlif4Dom.py", line 58
    print "Using 4Dom interface module..."
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/genxmlif/xmlifApi.py'...
***   File "./lib/python3.5/site-packages/genxmlif/xmlifApi.py", line 370
    raise AttributeError, "Attribute %s not found!" %(repr(tupleOrAttrName))
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/genxmlif/xmlifDom.py'...
***   File "./lib/python3.5/site-packages/genxmlif/xmlifDom.py", line 69
    print "Xinclude: %s" %href
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/genxmlif/xmlifElementTree.py'...
***   File "./lib/python3.5/site-packages/genxmlif/xmlifElementTree.py", line 72
    print "Using elementtree interface module..."
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/genxmlif/xmlifMinidom.py'...
***   File "./lib/python3.5/site-packages/genxmlif/xmlifMinidom.py", line 63
    print "Using minidom interface module..."
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/genxmlif/xmlifUtils.py'...
***   File "./lib/python3.5/site-packages/genxmlif/xmlifUtils.py", line 193
    raise LookupError, "Prefix for namespaceURI '%s' not found!" % (ns)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/genxmlif/xmliftest.py'...
***   File "./lib/python3.5/site-packages/genxmlif/xmliftest.py", line 12
    print xmlTree.printTree(prettyPrint=1)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minixsv'...
Compiling './lib/python3.5/site-packages/minixsv/minixsvWrapper.py'...
***   File "./lib/python3.5/site-packages/minixsv/minixsvWrapper.py", line 36
    print validSyntaxText
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/minixsv/pyxsval.py'...
***   File "./lib/python3.5/site-packages/minixsv/pyxsval.py", line 93
    raise KeyError, "xmlIfKey %s already implemented!" %(xmlIfKey)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minixsv/xsvalBase.py'...
***   File "./lib/python3.5/site-packages/minixsv/xsvalBase.py", line 135
    except TagException, errInst:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minixsv/xsvalErrorHandler.py'...
***   File "./lib/python3.5/site-packages/minixsv/xsvalErrorHandler.py", line 122
    print string.join (self.infoDict.keys(), "\n")
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minixsv/xsvalSchema.py'...
***   File "./lib/python3.5/site-packages/minixsv/xsvalSchema.py", line 431
    except TagException, errInst:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minixsv/xsvalSimpleTypes.py'...
***   File "./lib/python3.5/site-packages/minixsv/xsvalSimpleTypes.py", line 78
    except BaseTypeError, errstr:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minixsv/xsvalUtils.py'...
***   File "./lib/python3.5/site-packages/minixsv/xsvalUtils.py", line 48
    r"Cc" : ur"\x00-\x1f\x7f-\x9f",
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minixsv-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
